js262/test/language/module-code/parse-err-decl-pos-export-for-const.js


/*---
description: Statement cannot contain an `export` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

for (const x = 0; false;)
  export default null;
